Definindo string de conexao

--- a/web.config
+++ b/web.config
@@ -7,4 +7,8 @@
             </files>
         </defaultDocument>
     </system.webServer>
+    <system.web>
+        <identity impersonate="false" />
+        <authentication mode="Windows" />
+    </system.web>
 </configuration>
