Alterando referencia para Service Local

--- a/web.config
+++ b/web.config
@@ -1,14 +1,116 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
-    <system.webServer>
-        <defaultDocument>
-            <files>
-                <add value="Index.asp" />
-            </files>
-        </defaultDocument>
-    </system.webServer>
-    <system.web>
-        <identity impersonate="false" />
-        <authentication mode="Windows" />
-    </system.web>
+
+  <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+
+  <connectionStrings>
+    <add name="Sample.Kadastro.Infraestrutura.Persistencia.UnitOfWork.MainUnitOfWork"
+         connectionString="Data Source=(local);Initial Catalog=kadastro;Persist Security Info=True;User ID=sa;Password=q1w2;MultipleActiveResultSets=True"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
+  <system.web>
+    <compilation targetFramework="4.0" />
+    <identity impersonate="false" />
+    <authentication mode="Windows" />
+  </system.web>
+
+  <system.serviceModel>
+
+    <services>
+
+      <service name="Sample.Kadastro.ServicoDistribuido.KadastroServiceHost" behaviorConfiguration="WebServiceBehaviour">
+        <endpoint address="" binding="webHttpBinding" contract="Sample.Kadastro.ServicoDistribuido.IKadastroServiceHost"
+                  behaviorConfiguration="web">
+        </endpoint>
+      </service>
+
+    </services>
+
+    <behaviors>
+
+      <serviceBehaviors>
+
+        <behavior name="WebServiceBehaviour">
+          <serviceMetadata httpGetEnabled="true"/>
+          <serviceDebug includeExceptionDetailInFaults="false"/>
+        </behavior>
+
+      </serviceBehaviors>
+
+      <endpointBehaviors>
+
+        <behavior name="web">
+          <webHttp/>
+        </behavior>
+
+      </endpointBehaviors>
+
+    </behaviors>
+
+    <!---
+    <bindings>
+      <netTcpBinding>
+        <binding name="netTcpBindingConfig" closeTimeout="01:30:00" openTimeout="01:30:00" receiveTimeout="01:30:00" sendTimeout="01:30:00" hostNameComparisonMode="StrongWildcard" maxBufferSize="2147483647" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" transferMode="Buffered">
+          <readerQuotas maxArrayLength="2147483647" maxStringContentLength="2147483647" maxBytesPerRead="2147483647" maxDepth="2147483647" maxNameTableCharCount="2147483647"/>
+          <security mode="None">
+            <message clientCredentialType="UserName" algorithmSuite="Default"/>
+          </security>
+        </binding>
+      </netTcpBinding>
+      <wsHttpBinding>
+        <binding name="httpBindingConfig" closeTimeout="01:30:00" openTimeout="01:30:00" receiveTimeout="01:30:00" sendTimeout="01:30:00" allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true">
+          <readerQuotas maxArrayLength="2147483647" maxStringContentLength="2147483647" maxBytesPerRead="2147483647" maxDepth="2147483647" maxNameTableCharCount="2147483647"/>
+          <security mode="None">
+            <transport clientCredentialType="None" proxyCredentialType="None" realm=""/>
+            <message clientCredentialType="UserName" algorithmSuite="Default"/>
+          </security>
+        </binding>
+      </wsHttpBinding>
+    </bindings>
+    
+    <behaviors>
+      
+      <serviceBehaviors>
+        <behavior>
+          <serviceMetadata httpGetEnabled="true"/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
+          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
+        </behavior>
+      </serviceBehaviors>
+      
+      <endpointBehaviors>
+        <behavior name="LargeEndPointBehavior">
+          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
+        </behavior>
+      </endpointBehaviors>
+      
+    </behaviors>
+    <serviceHostingEnvironment multipleSiteBindingsEnabled="true"/>
+    -->
+
+  </system.serviceModel>
+
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
+    <defaultDocument>
+      <files>
+        <add value="Index.asp" />
+      </files>
+    </defaultDocument>
+  </system.webServer>
+
+  <entityFramework>
+
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+
+  </entityFramework>
+
 </configuration>
