--- a/web.config
+++ b/web.config
@@ -8,7 +8,7 @@
 
   <connectionStrings>
     <add name="Sample.Kadastro.Infraestrutura.Persistencia.UnitOfWork.MainUnitOfWork"
-         connectionString="Data Source=(local);Initial Catalog=kadastro;Persist Security Info=True;User ID=sa;Password=q1w2;MultipleActiveResultSets=True"
+         connectionString="Data Source=(local);Initial Catalog=kadastro;Persist Security Info=True;User ID=sa;Password=Lilia!00;MultipleActiveResultSets=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 
@@ -22,8 +22,11 @@
 
     <services>
 
-      <service name="Sample.Kadastro.ServicoDistribuido.KadastroServiceHost" behaviorConfiguration="WebServiceBehaviour">
-        <endpoint address="" binding="webHttpBinding" contract="Sample.Kadastro.ServicoDistribuido.IKadastroServiceHost"
+      <service name="Sample.Kadastro.ServicoDistribuido.KadastroServiceHost" 
+                behaviorConfiguration="WebServiceBehaviour">
+        <endpoint address="" 
+                  binding="webHttpBinding" 
+                  contract="Sample.Kadastro.ServicoDistribuido.IKadastroServiceHost"
                   behaviorConfiguration="web">
         </endpoint>
       </service>
@@ -50,47 +53,6 @@
       </endpointBehaviors>
 
     </behaviors>
-
-    <!---
-    <bindings>
-      <netTcpBinding>
-        <binding name="netTcpBindingConfig" closeTimeout="01:30:00" openTimeout="01:30:00" receiveTimeout="01:30:00" sendTimeout="01:30:00" hostNameComparisonMode="StrongWildcard" maxBufferSize="2147483647" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" transferMode="Buffered">
-          <readerQuotas maxArrayLength="2147483647" maxStringContentLength="2147483647" maxBytesPerRead="2147483647" maxDepth="2147483647" maxNameTableCharCount="2147483647"/>
-          <security mode="None">
-            <message clientCredentialType="UserName" algorithmSuite="Default"/>
-          </security>
-        </binding>
-      </netTcpBinding>
-      <wsHttpBinding>
-        <binding name="httpBindingConfig" closeTimeout="01:30:00" openTimeout="01:30:00" receiveTimeout="01:30:00" sendTimeout="01:30:00" allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647" messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true">
-          <readerQuotas maxArrayLength="2147483647" maxStringContentLength="2147483647" maxBytesPerRead="2147483647" maxDepth="2147483647" maxNameTableCharCount="2147483647"/>
-          <security mode="None">
-            <transport clientCredentialType="None" proxyCredentialType="None" realm=""/>
-            <message clientCredentialType="UserName" algorithmSuite="Default"/>
-          </security>
-        </binding>
-      </wsHttpBinding>
-    </bindings>
-    
-    <behaviors>
-      
-      <serviceBehaviors>
-        <behavior>
-          <serviceMetadata httpGetEnabled="true"/>
-          <serviceDebug includeExceptionDetailInFaults="true"/>
-          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
-        </behavior>
-      </serviceBehaviors>
-      
-      <endpointBehaviors>
-        <behavior name="LargeEndPointBehavior">
-          <dataContractSerializer maxItemsInObjectGraph="2147483647"/>
-        </behavior>
-      </endpointBehaviors>
-      
-    </behaviors>
-    <serviceHostingEnvironment multipleSiteBindingsEnabled="true"/>
-    -->
 
   </system.serviceModel>
 
